sidebar and porto integration

--- a/assets/css/tvsCore.css
+++ b/assets/css/tvsCore.css
@@ -225,3 +225,8 @@ body.boxed .page-wrapper {
     display: block!important;
   }
 }
+
+.left-sidebar, .right-sidebar,
+.main-content {
+  padding-top: 5px!important;
+}
